Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1777

Restriction checking code resolves an element from a wrong schema grammar

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.8.0
    • 3.0.0
    • None
    • any

    Description

      The attached test case demonstrates a bug in restriction handling logic. After some debugging it appears that the element in the base type is resolved in the wrong schema grammar. Normally it would fail and the fall back cases would resolve the corrent element. But in this test case we have an otherwise unrelated type at the right position which happened to have an element with the same. If one renames the Value element in the bar type, the error goes away.

      Attachments

        1. base.xsd
          0.4 kB
          Boris Kolpackov
        2. derived.xsd
          0.6 kB
          Boris Kolpackov
        3. test.xml
          0.1 kB
          Boris Kolpackov

        Activity

          People

            bsk Boris Kolpackov
            bsk Boris Kolpackov
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: