In restriction checking, when looking for a declaration of a base element, use the schema grammar corresponding to the type this element is declared in (XERCESC-1777)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@620798 13f79535-47bb-0310-9956-ffa450edef68